[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/UI/Backgrounds/Clouds_100x59.png" type="Texture" id=1]
[ext_resource path="res://assets/UI/Buttons/Continue_button.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/Buttons/Button_pressed.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/Buttons/Menu_button_normal.png" type="Texture" id=4]
[ext_resource path="res://UserInterface/Death_UI.gd" type="Script" id=5]
[ext_resource path="res://assets/UI/Sound/click_sound_1.wav" type="AudioStream" id=6]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 419, 193 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Node2D" parent="."]

[node name="Continue_button" type="Button" parent="Buttons"]
margin_left = 495.0
margin_top = 269.0
margin_right = 801.0
margin_bottom = 422.0
custom_styles/pressed = SubResource( 1 )
icon = ExtResource( 2 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu_button" type="Button" parent="Buttons"]
margin_left = 951.0
margin_top = 728.0
margin_right = 1263.0
margin_bottom = 871.0
custom_styles/pressed = SubResource( 1 )
icon = ExtResource( 4 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Sound" type="AudioStreamPlayer" parent="Buttons"]
stream = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
z_index = -1
z_as_relative = false
texture = ExtResource( 1 )
centered = false
[connection signal="pressed" from="Buttons/Continue_button" to="." method="_on_Continue_button_pressed"]
[connection signal="pressed" from="Buttons/Menu_button" to="." method="_on_Menu_button_pressed"]
